--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/medical-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Doctor Booking System</title>
     <meta
       name="description"
       content="A modern web application for managing medical appointments"
     />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Doctor Booking System" />
 
     <meta property="og:title" content="Doctor Booking System" />
     <meta
@@ -17,17 +17,11 @@
       content="A modern web application for managing medical appointments"
     />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
+    <meta property="og:image" content="/medical-icon.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta
-      name="twitter:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
+    <meta name="twitter:site" content="@doctorbooking" />
+    <meta name="twitter:image" content="/medical-icon.svg" />
   </head>
 
   <body>
